--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Calculadora</title>
 </head>
 <body>
-    
+    <h1>Calculadora Basica</h1>
      <table>
+      
         <tr>
           <td colspan="4"><button>0</button></td>
         </tr>
