--- a/index.html
+++ b/index.html
@@ -4,44 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <title>Calculadora</title>
+    <link rel="stylesheet" href="./styles/main.css">
+    <title>Calculadora basica</title>
 </head>
 <body>
-    <h1>Calculadora Basica</h1>
-     <table>
-      
-        <tr>
-          <td colspan="4"><button>0</button></td>
-        </tr>
-        <tr>
-          <td><button>1</button></td>
-          <td><button>2</button></td>
-          <td><button>3</button></td>
-          <td><button>+</button></td>
-        </tr>
-        <tr>
-          <td><button>4</button></td>
-          <td><button>5</button></td>
-          <td><button>6</button></td>
-          <td><button>-</button></td>
-        </tr>
-        <tr>
-          <td><button>7</button></td>
-          <td><button>8</button></td>
-          <td><button>9</button></td>
-          <td><button>*</button></td>
-        </tr>
-        <tr>
-          <td colspan="3"><button>0</button></td>
-          <td><button>/</button></td>          
-        </tr>
-        <tr>
-          <td colspan="2"><button class="ac">AC</button></td>
-          <td><button>.</button></td>
-          <td><button>=</button></td>            
-        </tr>
-      </table>
-
+       <button> <a href="./pages/Calculadora.html"> IR A LA CALCULADORA</a></button>
 </body>
 </html>
