--- a/pages/Calculadora.html
+++ b/pages/Calculadora.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Calculadora Basica</h1>
-         <table>
+         <table class="menu">
       
         <tr>
           <td colspan="4"><button>0</button></td>
@@ -42,6 +42,6 @@
           <td><button>=</button></td>            
         </tr>
       </table>
-      <label id="incio"><a href="../index.html">IR AL INICIO</a></label>
+      <label id="incio" style="font-size: 30px;"><a href="../index.html">IR AL INICIO</a></label>
 </body>
 </html>
