--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Calculadora basica</title>
 </head>
 <body>
+    <h1>Trabajo final fronted</h1>
+    <p>El siguiente trabajo es presentado a los docentes gustavo y jose con el fin de obtener una nota en el desarrollo del curso fronted</p>
+    <h4>Integrantes</h4>
+    <ol>
+        <li>sandra</li>
+        <li>oscar</li>
+        <li>julian</li>
+        <li>richard</li>
+    </ol>
+    
        <button> <a href="./pages/Calculadora.html"> IR A LA CALCULADORA</a></button>
 </body>
 </html>
