--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,33 @@
     <link rel="stylesheet" href="./styles/main.css">
     <title>Calculadora basica</title>
 </head>
+
 <body>
-    <h1>Trabajo final fronted</h1>
-    <p>El siguiente trabajo es presentado a los docentes gustavo y jose con el fin de obtener una nota en el desarrollo del curso fronted</p>
-    <h4>Integrantes</h4>
-    <ol>
-        <li>sandra</li>
-        <li>oscar</li>
-        <li>julian</li>
-        <li>richard</li>
-    </ol>
-    
-       <button> <a href="./pages/Calculadora.html"> IR A LA CALCULADORA</a></button>
+    <header id="header" ; class="header">
+        <div class="contenedor">
+            <div class="textos">
+              <h1>Trabajo Final</h1>
+                <p>El siguiente trabajo es presentado a los docentes gustavo y jose con el fin de obtener una nota en el
+                    desarrollo del curso fronted</p>
+                    <h2>Integrantes</h2>
+                <h2>
+                    <ol>
+                        <li>sandra</li>
+                        <li>oscar</li>
+                        <li>julian</li>
+                        <li>richard</li>
+                    </ol>
+                </h2>
+            </div>
+            <img src="./image/academia-removebg-preview.png" alt="">
+        </div>
+    </header>
+
+
+    <button> <a href="./pages/Calculadora.html"> IR A LA CALCULADORA</a></button>
+
+
+
 </body>
+
 </html>
