--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div class="contenedor">
             <div class="textos">
               <h1>Trabajo Final</h1>
-                <p>El siguiente trabajo es presentado a los docentes gustavo y jose con el fin de obtener una nota en el
-                    desarrollo del curso fronted</p>
-                    <h2>Integrantes</h2>
+               <h2>Integrantes</h2>
                 <h2>
+                    <p>El siguiente trabajo es presentado a los docentes gustavo y jose con el fin de obtener una nota en el
+                        desarrollo del curso fronted</p>
                     <ol>
                         <li>sandra</li>
                         <li>oscar</li>
@@ -25,16 +25,10 @@
                         <li>richard</li>
                     </ol>
                 </h2>
+                <button style="background-color: transparent; border: none;"> <a style="padding: 0.02rem;" href="./pages/Calculadora.html"> IR A LA CALCULADORA</a></button>
             </div>
             <img src="./image/academia-removebg-preview.png" alt="">
-        </div>
-    </header>
-
-
-    <button> <a href="./pages/Calculadora.html"> IR A LA CALCULADORA</a></button>
-
-
-
+          </div>
+       </header>
 </body>
-
 </html>
