--- a/index.html
+++ b/index.html
@@ -13,22 +13,29 @@
     <header id="header" ; class="header">
         <div class="contenedor">
             <div class="textos">
-              <h1>Trabajo Final</h1>
-               <h2>Integrantes</h2>
+                <h1>Trabajo Final</h1>
                 <h2>
-                    <p>El siguiente trabajo es presentado a los docentes gustavo y jose con el fin de obtener una nota en el
-                        desarrollo del curso fronted</p>
+                    <p>Sit quia deleniti qui consequuntur voluptatem ea totam molestiae sit impedit necessitatibus. Quo
+                        natus odio sed quibusdam aspernatur et tenetur quibusdam non repellat repudiandae id cupiditate
+                        harum a deleniti tempora id expedita incidunt! Aut harum sapiente et minus nostrum et quasi
+                        fugiat nam similique minus ex repellendus magni et deserunt voluptas. Est commodi temporibus aut
+                        enim optio hic optio quis quo deleniti officiis id error corporis?</p>
+                    <br>
+                    <p>INTEGRANTES</p>
                     <ol>
                         <li>sandra</li>
                         <li>oscar</li>
                         <li>julian</li>
                         <li>richard</li>
+                        <br>
                     </ol>
                 </h2>
-                <button style="background-color: transparent; border: none;"> <a style="padding: 0.02rem;" href="./pages/Calculadora.html"> IR A LA CALCULADORA</a></button>
+                <button style="background-color: transparent; border: none;"> <a style="padding: 0.02rem;"
+                        href="./pages/Calculadora.html"> IR A LA CALCULADORA</a></button>
             </div>
             <img src="./image/academia-removebg-preview.png" alt="">
-          </div>
-       </header>
+        </div>
+    </header>
 </body>
+
 </html>
