--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <p>INTEGRANTES</p>
                     <ol>
                         <li>sandra</li>
-                        <li>oscar</li>
+                        <li>Oskar</li> <!-- add by Oskar Gelves-->
                         <li>julian</li>
                         <li>richard</li>
                         <br>
