--- a/index.html
+++ b/index.html
@@ -14,24 +14,29 @@
         <div class="contenedor">
             <div class="textos">
                 <h1>Trabajo Final</h1>
-                <h2>
-                    <p>Sit quia deleniti qui consequuntur voluptatem ea totam molestiae sit impedit necessitatibus. Quo
-                        natus odio sed quibusdam aspernatur et tenetur quibusdam non repellat repudiandae id cupiditate
-                        harum a deleniti tempora id expedita incidunt! Aut harum sapiente et minus nostrum et quasi
-                        fugiat nam similique minus ex repellendus magni et deserunt voluptas. Est commodi temporibus aut
-                        enim optio hic optio quis quo deleniti officiis id error corporis?</p>
+                
+                <h2> <br>
+                    <p>Este proyecto es la entrega final del curso Ser+Capaces de la Academia Geek. <br> <br>
+                        Hemos hecho una calculadora que realiza las operaciones básicas usando Html, Css (Framework
+                        Kube) y JavaScript. El funcionamiento de la misma es bastante intuitivo y consiste en completar
+                        los campos “Número 1” y “Número 2” y posteriormente escoger la operación (Adición,
+                        Multiplicación, Sustracción o División) según la necesidad del usuario; una vez realizado este
+                        proceso, se debe dar click en “Calcular” para que operación sea ejecutada y en la página
+                        aparezca el resultado. En caso de ser una operación inválida, en la pantalla se muestra una
+                        alerta que indica el error.
+                    </p>
                     <br>
-                    <p>INTEGRANTES</p>
+                    <p class="integrantes">Integrantes</p>
                     <ol>
-                        <li>sandra</li>
-                        <li>Oskar</li> <!-- add by Oskar Gelves-->
-                        <li>julian</li>
-                        <li>richard</li>
+                        <li>Sandra Milena Pérez</li>
+                        <li>Oskar Gelves</li> <!-- add by Oskar Gelves-->
+                        <li>Julián Álvarez</li>
+                        <li>Richard Alberto Fuentes</li>
                         <br>
                     </ol>
                 </h2>
                 <button style="background-color: transparent; border: none;"> <a style="padding: 0.02rem;"
-                        href="./pages/Calculadora.html"> IR A LA CALCULADORA</a></button>
+                        href="./pages/Calculadora.html"> Ir a la Calculadora</a></button>
             </div>
             <img src="./image/academia-removebg-preview.png" alt="">
         </div>
