Update and rename pages/Calculadora.html to páginas/Calculadora.html

--- a/páginas/Calculadora.html
+++ b/páginas/Calculadora.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--add by Oskar Gelves-->
-    <link href="/kube/dist/css/kube.min.css" rel="stylesheet" />
-    <script src="/script/jquery-3.6.0.min.js"></script>
-    <link href="/kube/dist/css/kube.min.css" rel="stylesheet" />
+    <link href="../kube/dist/css/kube.min.css" rel="stylesheet" />
+    <script src="../script/jquery-3.6.0.min.js"></script>
+    <link href="../kube/dist/css/kube.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="/styles/Metodos.css" rel="stylesheet" />
+    <link href="../styles/Metodos.css" rel="stylesheet" />
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <!-- end Oskar Gelves-->
     <link rel="stylesheet" href="../styles/calculadora.css">
@@ -192,14 +192,14 @@
 <script src="/script/jquery-3.6.0.intellisense.js"></script>
 
 <!-- Kube -->
-<script src="/kube/dist/js/kube.min.js"></script>
+<script src="../kube/dist/js/kube.min.js"></script>
 
 
 
 
 
 <!-- Page specific script -->
-<script src="/script/Metodos.js"></script>
+<script src="../script/Metodos.js"></script>
 
 
 
