--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </ol>
                 </h2>
                 <button style="background-color: transparent; border: none;"> <a style="padding: 0.02rem;"
-                        href="./pages/Calculadora.html"> Ir a la Calculadora</a></button>
+                        href="./pages/Index.html"> Ir a la Calculadora</a></button>
             </div>
             <img src="./image/academia-removebg-preview.png" alt="">
         </div>
