--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--add por Oskar Gelves-->
-    <enlace href="/kube/dist/css/kube.min.css" rel="hoja de estilo" />
-    <script src="/script/jquery-3.6.0.min.js"></script>
-    <enlace href="/kube/dist/css/kube.min.css" rel="hoja de estilo" />
+    <enlace href="kube/dist/css/kube.min.css" rel="hoja de estilo" />
+    <script src="script/jquery-3.6.0.min.js"></script>
+    <enlace href="kube/dist/css/kube.min.css" rel="hoja de estilo" />
     <link rel="hoja de estilo" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <enlace href="/styles/Metodos.css" rel="hoja de estilo" />
+    <enlace href="styles/Metodos.css" rel="hoja de estilo" />
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <!-- final Oskar Gelves-->
     <link rel="hoja de estilo" href="../styles/calculadora.css">
@@ -189,17 +189,17 @@ barra lateral de control de <!-- -->
 <!-- ./envoltorio -->
 
 
-<script src="/script/jquery-3.6.0.intellisense.js"></script>
+<script src="script/jquery-3.6.0.intellisense.js"></script>
 
 <!-- Kube -->
-<script src="/kube/dist/js/kube.min.js"></script>
+<script src="kube/dist/js/kube.min.js"></script>
 
 
 
 
 
 <!-- Script específico de la página -->
-<script src="/script/Metodos.js"></script>
+<script src="script/Metodos.js"></script>
 
 
 
