--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--add por Oskar Gelves-->
-    <enlace href="./kube/dist/css/kube.min.css" rel="hoja de estilo" />
-    <script src="./script/jquery-3.6.0.min.js"></script>
-    <enlace href="./kube/dist/css/kube.min.css" rel="hoja de estilo" />
+    <enlace href="/proyecto/kube/dist/css/kube.min.css" rel="hoja de estilo" />
+    <script src="/proyectoscript/jquery-3.6.0.min.js"></script>
+    <enlace href="/proyecto/kube/dist/css/kube.min.css" rel="hoja de estilo" />
     <link rel="hoja de estilo" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <enlace href="./styles/Metodos.css" rel="hoja de estilo" />
+    <enlace href="/proyecto/styles/Metodos.css" rel="hoja de estilo" />
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <!-- final Oskar Gelves-->
-    <link rel="hoja de estilo" href="./styles/calculadora.css">
+    <link rel="hoja de estilo" href="/proyecto/styles/calculadora.css">
     <título>Calculadora</título>
 </cabeza>
 <cuerpo>
@@ -30,7 +30,7 @@
                   <div class="is-brand">
                       logotipo de la marca <!-- -->
                       <b href="#" class="is-logo">
-                          <img src="/image/cal.jpg"
+                          <img src="/proyecto/image/cal.jpg"
                                alt="Calculadora"
                                style="opacidad: .8; ancho:15%; alto:15%" />
                           <span class="medium">Operaciones</span>
@@ -189,17 +189,17 @@ barra lateral de control de <!-- -->
 <!-- ./envoltorio -->
 
 
-<script src="./script/jquery-3.6.0.intellisense.js"></script>
+<script src="/proyecto/script/jquery-3.6.0.intellisense.js"></script>
 
 <!-- Kube -->
-<script src="./kube/dist/js/kube.min.js"></script>
+<script src="/proyecto/kube/dist/js/kube.min.js"></script>
 
 
 
 
 
 <!-- Script específico de la página -->
-<script src="./script/Metodos.js"></script>
+<script src="/proyecto/script/Metodos.js"></script>
 
 
 
