--- a/pages/Calculadora.html
+++ b/pages/Calculadora.html
@@ -30,7 +30,7 @@
                   <div class="is-brand">
                       <!-- Brand Logo -->
                       <b href="#" class="is-logo">
-                          <img src="/image/cal.jpg"
+                          <img src="../image/cal.jpg"
                                alt="Calculadora"
                                style="opacity: .8; width:15%; height:15%" />
                           <span class="medium">Operaciones</span>
