--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <p class="integrantes">Integrantes</p>
                     <ol>
                         <li>Sandra Milena Pérez</li>
-                        <li>Oskar Gelves</li> <!-- add by Oskar Gelves-->
+                        <li>Oskar Erick Gelves</li> <!-- add by Oskar Gelves-->
                         <li>Julián Álvarez</li>
                         <li>Richard Alberto Fuentes</li>
                         <br>
