--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <div style="text-align: right;">
+        <a href="./index.html">Inicio</a>
+        <a href="#">Nueva Pagina</a>
+        <a href="./pages/Calculadora.html">Calculadora</a>
+    </div>
     <header id="header" ; class="header">
         <div class="contenedor">
             <div class="textos">
