--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div style="text-align: right; background-color: rgba(116, 107, 107, 0.436); height: 45x;">
+    <div style="text-align: right; background-color: rgba(116, 107, 107, 0.436);">
         <a href="./index.html">Inicio</a>
         <a href="#">Nueva Pagina</a>
         <a href="./pages/Calculadora.html">Calculadora</a>
