--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 <body>
     <div style="text-align: right; background-color: rgba(116, 107, 107, 0.436);">
-        <a href="./index.html">Inicio</a>
         <a href="#">Nueva Pagina</a>
         <a href="./pages/Calculadora.html">Calculadora</a>
     </div>
@@ -43,6 +42,15 @@
             </div>
             <img src="./image/academia-removebg-preview.png" alt="">
         </div>
+        <div class="burbujas">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
     </header>
 </body>
 
