--- a/pages/Calculadora.html
+++ b/pages/Calculadora.html
@@ -16,6 +16,11 @@
     <title>Calculadora</title>
 </head>
 <body>
+  <div style="text-align: center;">
+        <a href="../index.html">Inicio</a>
+        <a href="#">Nueva Pagina</a>
+    </div>
+  
    
 <!--add by Oskar Gelves-->
 <!-- GRID -->
@@ -177,7 +182,7 @@
 <footer class="main-footer">
 <div class="float-right d-none d-sm-block">
 </div>
-<strong> Usamos el kube frameworks para Calculadura.html </strong>
+<strong style="margin-left: 45px;"> Usamos el kube frameworks para Calculadura.html </strong>
 </footer>
 
 <!-- Control Sidebar -->
@@ -206,7 +211,5 @@
 
 <!-- end Oskar Gelves-->
     
-    
-    <label id="incio" style="font-size: 12px;"><a href="../index.html">IR AL INICIO</a></label>
 </body>
 </html>
