--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 </head>
 
 <body>
-    <div style="text-align: right; background-color: rgba(116, 107, 107, 0.436);">
-        <a href="#">Nueva Pagina</a>
-        <a href="./pages/Calculadora.html">Calculadora</a>
-    </div>
+  
     <header id="header" ; class="header">
+        <nav>
+            <a href="./pages/QuienesSomos.html">¿Quiénes Somos?</a>
+            <a href="./pages/NuestroProyecto.html">Nuestro Proyecto</a>
+            <a href="./pages/Calculadora.html">Calculadora</a>
+            <a href="./pages/Contacto.html">Contacto</a>
+        </nav>
+        
         <div class="contenedor">
             <div class="textos">
                 <h1>Trabajo Final</h1>
@@ -42,15 +46,7 @@
             </div>
             <img src="./image/academia-removebg-preview.png" alt="">
         </div>
-        <div class="burbujas">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-          </div>
+  
     </header>
 </body>
 
