--- a/pages/Calculadora.html
+++ b/pages/Calculadora.html
@@ -16,10 +16,12 @@
     <title>Calculadora</title>
 </head>
 <body>
-  <div style="text-align: center;">
-        <a href="../index.html">Inicio</a>
-        <a href="#">Nueva Pagina</a>
-    </div>
+  <nav style="text-align: center;">
+        <a class="menu" href="../index.html">Inicio</a>
+        <a class="menu" href="../pages/Contacto.html">Contacto</a>
+        <a class="menu" href="../pages/NuestroProyecto.html">Nuestro proyecto</a>
+        <a class="menu" href="../pages/QuienesSomos.html">¿Quienes Somos?</a>
+  </nav>
   
    
 <!--add by Oskar Gelves-->
@@ -210,6 +212,16 @@
 
 
 <!-- end Oskar Gelves-->
+
+<div class="burbujas">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
     
 </body>
 </html>
