modifique el footer

--- a/pages/Calculadora.html
+++ b/pages/Calculadora.html
@@ -184,7 +184,7 @@
 <footer class="main-footer">
 <div class="float-right d-none d-sm-block">
 </div>
-<strong style="margin-left: 45px;"> Usamos el kube frameworks para Calculadura.html </strong>
+<strong style="margin-left: 45px;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Usamos el kube frameworks para Calculadura.html </strong>
 </footer>
 
 <!-- Control Sidebar -->
