modifique los labels

--- a/pages/Calculadora.html
+++ b/pages/Calculadora.html
@@ -12,7 +12,7 @@
     <link href="../styles/Metodos.css" rel="stylesheet" />
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <!-- end Oskar Gelves-->
-    <link rel="stylesheet" href="../styles/calculadora.css">
+   
     <title>Calculadora</title>
 </head>
 <body>
@@ -116,7 +116,7 @@
                           <div class=" is-row">
                             
                               <div class="is-col is-30 form-item">
-                                  <label class="label is-focus" for="num1"><i class="fa fa-pencil"></i> &nbsp;N&uacute;mero 1: &nbsp;</label>
+                                  <label class="Labels is-focus" for="num1"><i class="fa fa-pencil"></i> &nbsp;N&uacute;mero 1: &nbsp;</label>
                               </div>
                               <div class="is-col is-10">
                                 &nbsp;
@@ -131,7 +131,7 @@
                           <div class=" is-row">
                               
                               <div class="is-col is-30 form-item">
-                                  <label class="label is-focus" for="num2"><i class="fa fa-pencil"></i> &nbsp;N&uacute;mero 2:&nbsp;</label>
+                                  <label class="Labels is-focus" for="num2"><i class="fa fa-pencil"></i> &nbsp;N&uacute;mero 2:&nbsp;</label>
                               </div>
                               <div class="is-col is-10">
                                 &nbsp;
