--- a/pages/Calculadora.html
+++ b/pages/Calculadora.html
@@ -12,7 +12,7 @@
     <link href="../styles/Metodos.css" rel="stylesheet" />
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <!-- end Oskar Gelves-->
-   
+   <link rel="stylesheet" href="../styles/calculadora.css">
     <title>Calculadora</title>
 </head>
 <body>
