--- a/pages/Calculadora.html
+++ b/pages/Calculadora.html
@@ -26,7 +26,7 @@
    
 <!--add by Oskar Gelves-->
 <!-- GRID -->
-<div class="wrapper">
+<div class="wrapper BackMark">
   <div class="inner-wrapper">
       <h1 class=" h1 text-centered ">Calculadora B&aacute;sica</h1>
       <!-- Main Sidebar units-row  is-row Container -->
