--- a/pages/Calculadora.html
+++ b/pages/Calculadora.html
@@ -28,7 +28,7 @@
 <!-- GRID -->
 <div class="wrapper">
   <div class="inner-wrapper">
-      <h1 class=" h1 text-centered ">Calculadora B&aacute;sica</h1>
+      <h1 class=" h1 text-centered is-focus">Calculadora B&aacute;sica</h1>
       <!-- Main Sidebar units-row  is-row Container -->
       <div class="is-row ">
        
@@ -52,28 +52,28 @@
                           <ul role="menu" data-accordion="false">
                              
                               <li class="nav-item">
-                                  <a href="#" id="suma" name="suma" role="button" onclick="btnsuma()" >
+                                  <a  class="is-focus" href="#" id="suma" name="suma" role="button" onclick="btnsuma()" >
                                       <i class=" fa fa-check"></i>
                                       <p>Adici&oacute;n</p>
                                   </a>
                               </li>
 
                               <li class="nav-item"  >
-                                  <a href="#"  id= "multiplica" role="button" onclick="btnmultiplica()" class="nav-link is-push-right">
+                                  <a class="is-focus" href="#"  id= "multiplica" role="button" onclick="btnmultiplica()" class="nav-link is-push-right">
                                       <span class=" fa fa-check"></span>
                                       <p>Multiplicaci&oacute;n</p>
                                   </a>
                               </li>
 
                               <li class="nav-item" >
-                                  <a href="#" id="resta" role="button" onclick="btnresta()"  class="nav-link is-push-right">
+                                  <a class="is-focus" href="#" id="resta" role="button" onclick="btnresta()"  class="nav-link is-push-right">
                                       <span class=" fa fa-check"></span>
                                       <p>Sustracci&oacute;n</p>
                                   </a>
                               </li>
 
                               <li class="nav-item">
-                                  <a href="#" id="divide" role="button" onclick="btndivide()" class="nav-link is-push-right">
+                                  <a  class="is-focus" href="#" id="divide" role="button" onclick="btndivide()" class="nav-link is-push-right">
                                       <span class="fa fa-check"></span>
                                       <p>Divisi&oacute;n</p>
                                   </a>
@@ -100,7 +100,7 @@
                   <div class="is-col is-100">
                       <div class="caret">
                           <div class="card-title">
-                              <h2>Operandos</h2>
+                              <h2 class="is-focus">Operandos</h2>
                           </div>
                       </div>
                   </div>
@@ -184,7 +184,7 @@
 <footer class="main-footer">
 <div class="float-right d-none d-sm-block">
 </div>
-<strong style="margin-left: 45px;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Usamos el kube frameworks para Calculadura.html </strong>
+<strong style="margin-left: 45px;" class="is-focus"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Usamos el kube frameworks para Calculadura.html </strong>
 </footer>
 
 <!-- Control Sidebar -->
