--- a/pages/Calculadora.html
+++ b/pages/Calculadora.html
@@ -8,6 +8,7 @@
     <link href="../kube/dist/css/kube.min.css" rel="stylesheet" />
     <script src="../script/jquery-3.6.0.min.js"></script>
     <link href="../kube/dist/css/kube.min.css" rel="stylesheet" />
+    <meta http-equiv="refresh" content="20">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="../styles/Metodos.css" rel="stylesheet" />
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
