--- a/pages/QuienesSomos.html
+++ b/pages/QuienesSomos.html
@@ -9,6 +9,7 @@
     <title>Quiénes Somos</title>
 </head>
 <hr>
+
 <body>
 
     <header class="header">
@@ -26,11 +27,9 @@
                 <h2>¿Quiénes Somos?</h2> <br> <br> <br>
                 <h2>Somos Academia Geek</h2> <br>
                 <h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, explicabo neque
-                        blanditiis est optio,
-                        maxime porro, autem ullam provident id delectus praesentium temporibus magnam necessitatibus
-                        dolores
-                        tempore. Sint, culpa perferendis.</p>
+                    <p>Academia Geek es una academia de código y programación promovida por una alianza entre MAKAIA y
+                        Agile Innova, dos organizaciones que trabajan con tecnología, innovación y soluciones digitales
+                        que han decidido compartir conocimiento y promover la formación de talento TI..</p>
                     <br>
                 </h3>
 
@@ -41,7 +40,7 @@
                 allowfullscreen></iframe>
         </div>
         </div>
-<br><br>
+        <br><br>
         <div class="contenedorIntegrantes">
             <div class="textos">
 
@@ -52,7 +51,7 @@
                     <li>Oskar Gelves</li>
                     <li>Richard Alberto Fuentes</li>
                     <li>Julián Álvarez</li>
-                    
+
 
                 </ol>
 
