--- a/pages/Calculadora.html
+++ b/pages/Calculadora.html
@@ -162,7 +162,7 @@
                           
                           <div class=" is-row">
                             <div class="is-col is-20">
-                                <button id="Clear"  class="button" onclick="borrar()">Borrar Memoria</button>
+                                <input type="button" id="Clear"  class="button" onclick="borrar()" value="Borrar">
                             </div> 
                             <div class="is-col is-80">
                                 <textarea id="Memory">&nbsp;</textarea>
