--- a/pages/Calculadora.html
+++ b/pages/Calculadora.html
@@ -165,7 +165,7 @@
                                 <input type="button" id="Clear"  class="button" onclick="borrar()" value="Borrar">
                             </div> 
                             <div class="is-col is-80">
-                                <textarea id="Memory">&nbsp;</textarea>
+                                <textarea id="Memory" readonly>&nbsp;</textarea>
                             </div>
                         </div>
 
