update index, metodo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  
+
     <header id="header" ; class="header">
         <nav>
             <a href="./pages/QuienesSomos.html">¿Quiénes Somos?</a>
@@ -21,17 +21,13 @@
         <hr>
         <div class="contenedor">
             <div class="textos">
-                <h1>Trabajo Final</h1>
-                
+                <h1>AYUDA WEB PARA PADRES DE FAMILIA EN LAS MATEMATICAS</h1>
+
                 <h2> <br>
-                    <p>Este proyecto es la entrega final del curso Ser+Capaces de la Academia Geek. <br> <br>
-                        Hemos hecho una calculadora que realiza las operaciones básicas usando Html, Css (Framework
-                        Kube) y JavaScript. El funcionamiento de la misma es bastante intuitivo y consiste en completar
-                        los campos “Número 1” y “Número 2” y posteriormente escoger la operación (Adición,
-                        Multiplicación, Sustracción o División) según la necesidad del usuario; una vez realizado este
-                        proceso, se debe dar click en “Calcular” para que operación sea ejecutada y en la página
-                        aparezca el resultado. En caso de ser una operación inválida, en la pantalla se muestra una
-                        alerta que indica el error.
+                    <p>Este proyecto consiste en una ayuda tecnológica para los padres de familia y sus hijos. <br> <br>
+                        Fue diseñada con el fin de que el padre de familia pueda mediante la tecnología web a mejorar y
+                        ayudar comprender mejor su hijo las operaciones básicas de matemáticas como son SUMA, RESTA,
+                        DIVISION Y MULTIPLICACION.
                     </p>
                     <br>
                     <p class="integrantes">Integrantes</p>
@@ -45,7 +41,7 @@
             </div>
             <img src="./image/academia-removebg-preview.png" alt="">
         </div>
-  
+
     </header>
 </body>
 
