--- a/pages/NuestroProyecto.html
+++ b/pages/NuestroProyecto.html
@@ -25,8 +25,7 @@
                 <h2>Nuestro Proyecto</h2>
                 <br>
                 <h3>
-                    <p> Este proyecto es la entrega final del curso Ser+Capaces de la Academia Geek. <br> 
-                        Hemos hecho una calculadora que realiza las operaciones básicas usando Html, Css (Framework
+                    <p>Hemos hecho una calculadora que realiza las operaciones básicas usando Html, Css (Framework
                         Kube) y JavaScript. El funcionamiento de la misma es bastante intuitivo y consiste en completar
                         los campos “Número 1” y “Número 2” y posteriormente escoger la operación (Adición,
                         Multiplicación, Sustracción o División) según la necesidad del usuario; una vez realizado este
